--- a/pom.xml
+++ b/pom.xml
@@ -485,7 +485,7 @@
                     <url>jdbc:mysql://localhost:3306/jhipster_app</url>
                     <defaultSchemaName>jhipster_app</defaultSchemaName>
                     <username>root</username>
-                    <password></password>
+                    <password>12345678</password>
                     <referenceUrl>hibernate:spring:com.softtek.jhipster.domain?dialect=org.hibernate.dialect.MySQL5InnoDBDialect&amp;hibernate.physical_naming_strategy=org.springframework.boot.orm.jpa.hibernate.SpringPhysicalNamingStrategy&amp;hibernate.implicit_naming_strategy=org.springframework.boot.orm.jpa.hibernate.SpringImplicitNamingStrategy</referenceUrl>
                     <verbose>true</verbose>
                     <logging>debug</logging>
